2016-06-28  Tim Horton  <timothy_horton@apple.com>

        Try to fix the build.

        * UIProcess/API/Cocoa/WKWebView.mm:
        * UIProcess/API/Cocoa/WKWebViewInternal.h:

2016-06-28  Tim Horton  <timothy_horton@apple.com>

        Keep track of when a WKWebView is blank before the initial non-empty layout
        https://bugs.webkit.org/show_bug.cgi?id=159217
        <rdar://problem/26071766>

        Reviewed by Beth Dakin.

        * UIProcess/API/Cocoa/WKWebView.mm:
        (-[WKWebView _initializeWithConfiguration:]):
        (-[WKWebView _setIsBlankBeforeFirstNonEmptyLayout:]):
        (-[WKWebView _didFirstVisuallyNonEmptyLayoutForMainFrame]):
        * UIProcess/API/Cocoa/WKWebViewInternal.h:
        * UIProcess/ios/PageClientImplIOS.mm:
        (WebKit::PageClientImpl::didFirstVisuallyNonEmptyLayoutForMainFrame):

2016-06-28  Anders Carlsson  <andersca@apple.com>

        PaymentMerchantSession should wrap a PKPaymentMerchantSession
        https://bugs.webkit.org/show_bug.cgi?id=159218
        rdar://problem/26872118

        Reviewed by Tim Horton.

        * Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:
        (IPC::ArgumentCoder<WebCore::PaymentMerchantSession>::encode):
        (IPC::ArgumentCoder<WebCore::PaymentMerchantSession>::decode):
        Use NSCoder.

        * UIProcess/ApplePay/WebPaymentCoordinatorProxy.h:
        PaymentMerchantSession is now a class.

        * UIProcess/ApplePay/WebPaymentCoordinatorProxy.messages.in:
        PaymentMerchantSession is now a class.

        * UIProcess/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
        (WebKit::WebPaymentCoordinatorProxy::platformCompleteMerchantValidation):
        Just get the underlying PKPaymentMerchantSession from the PaymentMerchantSession object.
        (WebKit::toPKPaymentMerchantSession): Deleted.

2016-06-28  Brian Burg  <bburg@apple.com>

        RunLoop::Timer should use constructor templates instead of class templates